# masorange_rules_helm

./: .bazelrc  MODULE.bazel  README.md  repositories.bzl
.bcr/: config.yml  metadata.template.json  source.template.json
.github/workflows/: ci-tests.yaml  publish.yaml  release.yaml
docs/: helm_chart.md  helm_release.md  helm_uninstall.md  k8s_namespace.md  sops_decrypt.md
examples/: MODULE.bazel  WORKSPACE
examples/chart_multi_version/: BUILD.bazel
examples/chart_multi_version/test_chart/: Chart.yaml
examples/chart_override/: BUILD.bazel
examples/chart_version_file/: BUILD.bazel
examples/chart_with_deps/: BUILD.bazel
examples/chart_with_image/: BUILD.bazel
examples/empty_chart/: BUILD.bazel
examples/release_local_chart/: BUILD.bazel
examples/release_remote_chart/: BUILD.bazel
examples/release_with_secrets/: .sops.yaml  BUILD.bazel  encrypted.secret.yaml
examples/release_with_secrets/sops/: age_keys.txt
examples/simple_chart/: BUILD.bazel
examples/simple_retro_chart/: BUILD.bazel
gcs/private/: gcloud_toolchain.bzl
helm/: helm.bzl
helm/private/: BUILD  chart_srcs.bzl  helm_chart.bzl  helm_chart_providers.bzl  helm_push.bzl  helm_release.bzl  helm_toolchain.bzl  helm_uninstall.bzl
helm/tests/helm_chart/: BUILD  chart_test.bzl
k8s/private/: kubectl_toolchain.bzl
sops/private/: sops_decrypt.bzl  sops_decrypt_macro.bzl  sops_toolchain.bzl
