load("@masorange_rules_helm//helm:defs.bzl", "helm_chart", "helm_release")

helm_chart(
    name = "package",
    chart_name = "random-chart-name",
    srcs = glob(["test_chart/**"]),
)

helm_release(
    name = "install",
    chart = ":package",
    namespace = "myapp",
    release_name = "release-name",
    wait = True,
    values = ["test_chart/values.yaml"],
)
